--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
+				<artifactId>maven-dependency-plugin</artifactId>
 				<version>3.9.6</version>
 				<inherited>true</inherited>
 				<configuration>
