--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,13 @@
 	<build>
 		<plugins>
 			<plugin>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                           <configuration>
+                           <source>1.8</source>
+                           <target>1.8</target>
+                           </configuration>
+                        </plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>3.9.6</version>
