--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.9.6</version>
 				<inherited>true</inherited>
 				<configuration>
 					<source>1.8</source>
