--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<artifactId>maven-war-plugin</artifactId>
 				<version>3.9.6</version>
 				<inherited>true</inherited>
 				<configuration>
@@ -123,6 +122,11 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+                               <groupId>org.apache.maven.plugins</groupId>
+                               <artifactId>maven-war-plugin</artifactId>
+                               <version>3.9.6</version>
+                        </plugin
 		</plugins>
 	</build>
 
