--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-war-plugin</artifactId>
                                <version>3.9.6</version>
-                        </plugin
+                        </plugin>
 		</plugins>
 	</build>
 
