--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,8 @@
                 <dependency>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.9.6</version>
+                    <version>3.8.4</version>
+		    <type>maven-plugin</type>
                 </dependency>
 		
   	</dependencies>
