--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
 		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
                 <dependency>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
+                    <artifactId>maven-dependency-plugin</artifactId>
                     <version>3.2.5</version>
 		    <type>maven-plugin</type>
                 </dependency>
