--- a/pom.xml
+++ b/pom.xml
@@ -93,12 +93,12 @@
 		<dependency>
                   <groupId>org.apache.maven</groupId>
                   <artifactId>maven-artifact</artifactId>
-                  <version>${mavenVersion}</version>
+                  <version>3.9.6</version>
                 </dependency>
                 <dependency>
                   <groupId>org.apache.maven</groupId>
                   <artifactId>maven-core</artifactId>
-                  <version>${mavenVersion}</version>
+                  <version>3.9.6</version>
                  </dependency>
 		
   	</dependencies>
